03-kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-server
  labels:
    app: echo-server
    environment: production
