03-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
  labels:
    app: echo-server
spec:
  type: ClusterIP
  selector:
    app: echo-server
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
